package main.models;

public enum Color {
    OS,
    XS,
    NONE
}

